# rust-starter-actix

./: .env.example  Cargo.toml  Dockerfile  README.md  env-example
.github/workflows/: build.yml
src/: db.rs  main.rs  service_manager.rs
src/controllers/: user_controller.rs
src/dao/: generic_dao.rs  mod.rs
src/entity/: user.rs
src/service/: user_service.rs
src/utils/: password.rs
