[package]
name = "rust-starter"
version = "0.1.0"
authors = ["jungRoit <roit.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
mongodb = "0.9.2"
bson = "0.14.0"
serde = "1.0.103"
futures = "0.3.4"
dotenv = "0.15.0"
env_logger = "0.8.2"
