[package]
name = "rust-starter"
version = "0.1.0"
authors = ["jungRoit <roit.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
actix-rt = "1"
bson = "1.1.0"
actix-web = "2"
mongodb = "1.1.1"
serde = "1.0.103"
futures = "0.3.4"
dotenv = "0.15.0"
env_logger = "0.8.2"
validator = { version = "0.12", features = ["derive"] }
